<resources>
    <string name="app_name">RAPACE</string>
    <string name="pseudo">Pseudo </string>
    <string name="mdp">Mot de passe </string>
    <string name="inscription">Inscription </string>
    <string name="visualisation">Visualisation </string>
    <string name="login">Login </string>
    <string name="retour">Retour </string>
    <string name="old_mdp">Ancien mot de passe </string>
    <string name="new_mdp">Nouveau mot de passe </string>
    <string name="confirm_mdp_new">Confirmer le nouveau mot de passe </string>
    <string name="confirm_mdp">Confirmer le mot de passe </string>
    <string name="ok">Ok</string>
    <string name="adresse">Adresse</string>
    <string name="image">Image</string>
    <string name="Categorie">Categorie</string>
    <string name="vid_o">Vidéo</string>
    <string name="tel">Téléphone</string>
    <string name="simuler">Simuler alerte</string>
    <string-array name="spinner_choice">
        <item>Habitation</item>
        <item>Commerce</item>
        <item>Musee</item>
        <item>Ecole</item>
        <item>Entrepot</item>
        <item>Bureau</item>
        <item>Institution publique</item>
    </string-array>
</resources>
